index.html modified

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 <h1>💖 Bizim Albümümüz 💖</h1>
 <div class="gallery">
   <div class="photo" data-msg="Gebze Center 💕">
-    <img src="/first.jpg" alt="FirstFoto">
+    <img src="./first.jpg" alt="FirstFoto">
   </div>
   <div class="photo" data-msg="Tavşancıl ✨">
-    <img src="/second.jpg" alt="SecondFoto">
+    <img src="./second.jpg" alt="SecondFoto">
   </div>
   <div class="photo" data-msg=" Kadıköy Stadyumu 💌">
-    <img src="/third.jpg" alt="ThirdFoto">
+    <img src="./third.jpg" alt="ThirdFoto">
   </div>
   <div class="photo" data-msg="Büyük Ada 🗺️ ">
-    <img src="/forth.jpg" alt="ForthFoto">
+    <img src="./forth.jpg" alt="ForthFoto">
   </div>
   <div class="photo" data-msg="En unutulmaz günümüz Bilardo ✨">
-    <img src="/fifth.jpg" alt="FifthFoto">
+    <img src="./fifth.jpg" alt="FifthFoto">
   </div>
   <div class="photo" data-msg="Hatıra 🎬">
-    <img src="/seventh.jpg" alt="SeventhFoto">
+    <img src="./seventh.jpg" alt="SeventhFoto">
   </div>
   <div class="photo" data-msg="Büyük Ada 2 🗺️ ">
-    <img src="/eighth.jpg" alt="EighthFoto">
+    <img src="./eighth.jpg" alt="EighthFoto">
   </div>
 </div>
 
