index modified and some jpg files added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,62 @@
   <div class="photo" data-msg="Büyük Ada 2 🗺️ ">
     <img src="./eighth.jpg" alt="EighthFoto">
   </div>
+
+<div class="photo" data-msg="Cinema 🎬 ">
+    <img src="./nineth.jpg" alt="NinethFoto">
+  </div>
+
+  <div class="photo" data-msg="Galata Kulesi 🎬 ">
+    <img src="./tenth.jpg" alt="TenthFoto">
+  </div>
+
+  <div class="photo" data-msg="izmit Seka Park 🗺️ ">
+    <img src="./eleventh.jpg" alt="EleventhFoto">
+  </div>
+
+   <div class="photo" data-msg="Darıca Sahil 💌 ">
+    <img src="./twelveth.jpg" alt="TwelvethFoto">
+  </div>
+ 
+  <div class="photo" data-msg="Darıca Sahil 2 💌 ">
+    <img src="./thirteen.jpg" alt="ThirteenthFoto">
+  </div>
+
+   <div class="photo" data-msg="Darıca Sahil 3 💌 ">
+    <img src="./fourteen.jpg" alt="FourteenthFoto">
+  </div>
+
+  <div class="photo" data-msg="Gebze 525 Otobüs 🗺️ ">
+    <img src="./fifteen.jpg" alt="FifteenthFoto">
+  </div>
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 
 <div id="popup" class="popup">
