index.html and style.css modified and commited

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<h1>💖 Bizim Albümümüz 💖</h1>
+<h1><b>💖 Bizim Albümümüz 💖</b></h1>
 <div class="gallery">
   <div class="photo" data-msg="Gebze Center 💕">
     <img src="./first.jpg" alt="FirstFoto">
