index.html modified and commited

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <img src="./tenth.jpg" alt="TenthFoto">
   </div>
 
-  <div class="photo" data-msg="izmit Seka Park 🗺️ ">
+  <div class="photo" data-msg="Marmaray Büyük Ada Dönüşü ">
     <img src="./eleventh.jpg" alt="EleventhFoto">
   </div>
 
